--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,6 @@
 .current-pharmacy {
     background-image: linear-gradient(to top, #fff1eb 0%, #ace0f9 100%);
+    opacity: 80%;
     margin: 1rem;
     padding: 2rem 0;
     text-align: center;
@@ -11,5 +12,9 @@
     -webkit-box-shadow: 8px 8px 24px 0px rgba(66, 68, 90, 1);
     -moz-box-shadow: 8px 8px 24px 0px rgba(66, 68, 90, 1);
     box-shadow: 8px 8px 24px 0px rgba(66, 68, 90, 1);
-    border-radius: 2rem;
+    border-radius: 0.1rem;
+    min-height: 150px;
+}
+.loader {
+    margin-top: 50px;
 }
