--- a/frontend/src/PharmacyCard.module.css
+++ b/frontend/src/PharmacyCard.module.css
@@ -2,3 +2,10 @@
 .calendar_input {
     display: none;
 }
+.info_text {
+    font-style: italic;
+    font-size: small;
+    align-items: center;
+    padding-top: 0.2rem;
+    text-align: right;
+}
